# flash-stu

./: .gitignore  LICENSE  README.md  dataloader.py  distributed.py  example.py  modules.py  pyproject.toml  requirements.txt  setup.cfg  stu.py  utils.py
flash_stu/: __init__.py  config.py  model.py
flash_stu/layers/: attention_layer.py  stu_layer.py
flash_stu/modules/: attention.py  stu.py  swiglu.py
flash_stu/utils/: numerics.py  stu_utils.py  training.py
flashstu/: __init__.py  model.py
flashstu/layers/: attention_layer.py  stu_layer.py
flashstu/modules/: modules.py  stu.py
training/: config.json  data.py  distributed.py  example.py  job.slurm
